--- a/public/index.html
+++ b/public/index.html
@@ -38,33 +38,7 @@
     ></script>
     <title>React App</title>
   </head>
-  <body onload="removeLoader()" class="day-mode">
-    <div id="loader"></div>
-    <div id="body"></div>
-    <div id="footer"></div>
-    <style>
-      body {
-        position: relative;
-        background-repeat: no-repeat;
-      }
-      #body {
-        position: relative;
-        overflow: hidden;
-      }
-      @media (max-width: 900px) {
-        body {
-          text-align: center;
-          position: relative;
-        }
-      }
-    </style>
-    <script src="../js/main.js"></script>
-    <script>
-      function removeLoader() {
-        setTimeout(() => {
-          document.getElementById("footer").style.display = "none";
-        }, 200);
-      }
-    </script>
+  <body>
+    <a href="https://zenmakerlab.com">Go to Zen Maker Lab.</a>
   </body>
 </html>
